# gdnsd

./: .astylerc  .gitignore  .gitmodules  .travis.yml  AUTHORS  ChangeLog  GIT-POLICY  INSTALL  Makefile.am  Makefile.in  NEWS  NEWS.old  README  README.md  VERSION3.md  VERSION4.md  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  coverage.sh  docs.am  sonar-project.properties
docs/: ControlSocket.md  DNSSEC.md  Makefile.am  Makefile.in  Manual.md  Security.md  TODO  centos.initscript  debian.initscript  gdnsd-plugin-api.pod  gdnsd-plugin-api.podin  gdnsd-plugin-extfile.pod  gdnsd-plugin-extfile.podin  gdnsd-plugin-extmon.pod  gdnsd-plugin-extmon.podin  gdnsd-plugin-geoip.pod  gdnsd-plugin-geoip.podin  gdnsd-plugin-http_status.pod  gdnsd-plugin-http_status.podin  gdnsd-plugin-metafo.pod  gdnsd-plugin-metafo.podin  gdnsd-plugin-multifo.podin  gdnsd-plugin-null.pod  gdnsd-plugin-null.podin  gdnsd-plugin-reflect.podin  gdnsd-plugin-simplefo.podin  gdnsd-plugin-static.pod  gdnsd-plugin-static.podin  gdnsd-plugin-tcp_connect.pod  gdnsd-plugin-tcp_connect.podin  gdnsd-plugin-weighted.pod  gdnsd-plugin-weighted.podin  gdnsd.config.pod  gdnsd.config.podin  gdnsd.djbdns.pod  gdnsd.djbdns.podin  gdnsd.pod  gdnsd.podin  gdnsd.supp  gdnsd.zonefile.pod  (+7 more)
gdnsd/: .gitignore  Makefile.am  Makefile.in  conf.c  conf.h  dlsym_fptr.c  dlsym_fptr.h  dnsio.c  dnsio.h  dnsio_tcp.c  dnsio_tcp.h  dnsio_udp.c  dnsio_udp.h  dnspacket.c  dnspacket.h  dnswire.h  gdnsd.config.pod  gdnsd.djbzones.pod  gdnsd.h  gdnsd.pod  gdnsd.zonefile.pod  lookup3_pk.h  ltarena.c  ltarena.h  ltree.c  ltree.h  main.c  main.h  monio.c  monio.h  pkterr.h  sendmmsg-compat.h  socks.c  socks.h  statio.c  statio.h  zlist.c  zlist.h  zone.c  zone.h  (+11 more)
gdnsd/libgdnsd/: .gitignore  Makefile.am  Makefile.in  alloc.c  dlsym_fptr.c  dname.c  evwrap.c  evwrap_ch.h  gdnsd-compiler.h  gdnsd-dname.h  gdnsd-log.h  gdnsd-misc-priv.h  gdnsd-misc.h  gdnsd-monio.h  gdnsd-net-priv.h  gdnsd-net.h  gdnsd-plugapi-priv.h  gdnsd-plugapi.h  gdnsd-plugin-api.pod  gdnsd-plugin.h  gdnsd-prcu-priv.h  gdnsd-satom.h  gdnsd-stats.h  gdnsd-vscf.h  log.c  misc.c  mon.c  monio.c  net.c  paths.c  plugapi.c  prcu.c  vscf.rl
libgdmaps/: Makefile.am  dcinfo.c  dcinfo.h  dclists.c  dclists.h  dcmap.c  dcmap.h  fips104.c  fips104.h  gdgeoip.c  gdgeoip.h  gdgeoip2.c  gdgeoip2.h  gdmaps.c  libgdmaps.m4  nets.c  nets.h  nlist.c  nlist.h  ntree.c  ntree.h
libgdmaps/t/: Makefile.am  gdmaps_test.c  t05_v64citydb.c  t13_castatdef.c  t14_missingcoords.c  t15_nogeo.c  t16_extnets.c  t17_extn_empty.c  tdownload.sh
libgdnsd/: Makefile.am  alloc.c  cs.c  dmn.c  dmn_net.c  dname.c  file.c  libdmn.m4  libgdnsd.m4  log.c  misc-priv.h  misc-prot.h  misc.c  mon-prot.h  mon.c  net-priv.h  net.c  paths.c  plugapi-priv.h  plugapi-prot.h  plugapi.c  plugapi.h  prcu.c  vscf.rl
libgdnsd/gdnsd/: dmn.h  misc.h  mon-priv.h  mon.h  net-priv.h  paths-priv.h  plugapi-priv.h  plugapi.h  prcu-priv.h  prcu.h  stats.h  vscf.h
plugins/: Makefile.am  Makefile.in  extfile.c  extmon.c  extmon_comms.c  extmon_comms.h  extmon_helper.c  gdnsd_geoip_test.c  geoip.c  http_status.c  meta_core.inc  metafo.c  multifo.c  null.c  reflect.c  simplefo.c  static.c  tcp_connect.c  weighted.c
plugins/extfile/: Makefile.am  extfile.c
plugins/extmon/: Makefile.am  extmon.c  extmon_comms.c  extmon_comms.h  extmon_helper.c  gdnsd-plugin-extmon.pod
plugins/meta/: Makefile.am  Makefile.in  gdnsd-plugin-geoip.pod  gdnsd-plugin-metafo.pod  gdnsd_geoip_test.c  geoip.c  meta_core.c  metafo.c
plugins/trivial/: Makefile.am  Makefile.in  gdnsd-plugin-multifo.pod  gdnsd-plugin-simplefo.pod  http_status.c  multifo.c  null.c  reflect.c  simplefo.c  static.c  tcp_connect.c
plugins/weighted/: Makefile.am  Makefile.in  gdnsd-plugin-weighted.pod  weighted.c
src/: Makefile.am  cdl.h  chal.c  chal.h  comp.c  comp.h  conf.c  conf.h  cookie.c  cookie.h  cs.h  csc.c  csc.h  css.c  css.h  daemon.c  daemon.h  dnsio_tcp.c  dnsio_tcp.h  dnsio_udp.c  dnsio_udp.h  dnspacket.c  dnspacket.h  dnssec.c  dnssec.h  dnssec_alg.c  dnssec_alg.h  dnssec_bench.c  dnssec_nxdc.c  dnssec_nxdc.h  dnstap.c  dnstap.h  dnstap.proto  dnswire.h  gdnsdctl.c  kdf_compat.c  kdf_compat.h  ltarena.c  ltarena.h  ltree.c  (+24 more)
src/plugins/: extfile.c  extmon.c  extmon_comms.c  extmon_comms.h  extmon_helper.c  gdnsd_geoip_test.c  geoip.c  http_status.c  meta_core.inc  metafo.c  mon.c  mon.h  multifo.c  null.c  plugapi.c  plugapi.h  plugins.h  reflect.c  simplefo.c  static.c  tcp_connect.c  weighted.c
sysd/: Makefile.am  gdnsd.service.tmpl
t/: .gitignore  AAAA66.pm  Makefile.am  Makefile.in  README-NETDNS  _FakeGeoIP.pm  _GDT.pm
t/001basic/: 001self.t  gdnsd.conf
t/002simple/: 001noerr.t  002noerr.t  002simple_errs.t  003simple_errs.t  gdnsd.conf
t/003complex/: 001delegations.t  002big.t  003limits.t  004cname.t  004delegations.t  005big.t  005compress.t  006broken.t  006limits.t  007chars.t  007cname.t  008compress.t  008random.t  009aaaa.t  009broken.t  010chars.t  010wild.t  011naptr.t  011random.t  012aaaa.t  012rfc3597.t  013alimit.t  013wild.t  014chaos.t  014naptr.t  015rfc3597.t  016alimit.t  017chaos.t  gdnsd.conf
t/004misc/: 001misc.t  002bad.t  018misc.t  019bad.t  gdnsd.conf
t/005tld/: 001tld.t  020tld.t  gdnsd.conf
t/006root/: 001root.t  021root.t  gdnsd.conf
t/007plugins/: 001trivial.t  002weighted.t  003dync.t  004metafo.t  022trivial.t  023weighted.t  024dync.t  025metafo.t  gdnsd.conf
t/008org_inc/: 001org_inc.t  gdnsd.conf
t/008origin/: 001org_inc.t  026org_inc.t
t/009monio/: 001_pri_nolisten.t  002_sec_nolisten.t  003_pri_listen.t  004_sec_listen.t  005_null_mon.t  006_pri_tcp_nolisten.t  007_sec_tcp_nolisten.t  008_pri_tcp_listen.t  009_sec_tcp_listen.t  010up_thresh.t  027_pri_nolisten.t  028_sec_nolisten.t  029_pri_listen.t  030_sec_listen.t  031_null_mon.t  032_pri_tcp_nolisten.t  033_sec_tcp_nolisten.t  034_pri_tcp_listen.t  035_sec_tcp_listen.t  gdnsd001.conf  gdnsd002.conf  gdnsd005.conf  gdnsd006.conf  gdnsd007.conf  gdnsd010.conf  server.pl  upthresh_ex.com
t/010relax/: 001relax.t  036relax.t  (+1 more)
(+564 files in other folders)
